--- a/index.html
+++ b/index.html
@@ -60,29 +60,70 @@
             <img src="scroll.png" alt="">
         </button> 
     </div>
-
     <div class="passage-container">
         <div class="news_title_wrap">
-            <span class="date"></span>
+            <span class="date_wrap">
+                <span class="date"></span>
+            </span>
             <span class="news_title">新闻</span>
-            <span class="date"></span>
+            <span class="date_wrap">
+                <span class="date"></span>
+            </span>
         </div>
         <div class="news_session">
             <span class="small_grid">
-                <span class="img"></span>
-                <span class="link"></span>
+                <img src="news_img.jpg" alt="" class="news_img">   
+                <span class="link">
+                    <a href="">www.jk/sgdlksjkglsd</a>
+                    <a href="">www.jdslg/fjisoiosd</a>
+                    <a href="">www.fgsjd</a>
+                </span>
             </span>
-            <span class="big_grid"></span>
-            <span class="small_grid"></span>
+            <span class="big_grid">
+                <span class="img"></span>  
+                <span class="link">
+                    <a href="">www.jk/sgdlksjkglsd</a>
+                    <a href="">www.jdslg/fjisoiosd</a>
+                    <a href="">www.fgsjd</a>
+                </span>
+            </span>
+            <span class="small_grid">
+                <img src="news_img.jpg" alt="" class="news_img">   
+                <span class="link">
+                    <a href="">www.jk/sgdlksjkglsd</a>
+                    <a href="">www.jdslg/fjisoiosd</a>
+                    <a href="">www.fgsjd</a>
+                </span>
+            </span>
         </div>
         <div class="news_session">
-            <span class="small_grid"></span>
-            <span class="big_grid"></span>
-            <span class="small_grid"></span>
+            <span class="small_grid">
+                <img src="news_img.jpg" alt="" class="news_img">   
+                <span class="link">
+                    <a href="">www.jk/sgdlksjkglsd</a>
+                    <a href="">www.jdslg/fjisoiosd</a>
+                    <a href="">www.fgsjd</a>
+                </span>
+            </span>
+            <span class="big_grid">
+                <span class="link">
+                    <a href="">www.jk/sgdlksjkglsd</a>
+                    <a href="">www.jdslg/fjisoiosd</a>
+                    <a href="">www.fgsjd</a>
+                </span>
+            </span>
+            <span class="small_grid">
+                <img src="news_img.jpg" alt="" class="news_img">   
+                <span class="link">
+                    <a href="">www.jk/sgdlksjkglsd</a>
+                    <a href="">www.jdslg/fjisoiosd</a>
+                    <a href="">www.fgsjd</a>
+                </span>
+            </span>
         </div>
     </div>
 
-    <div class="map" style="top: 300vh;">
+    <div class="map" style="top: 350vh;">
         <object data="Map.svg" id="svg-object">
         </object>
         <script>
