--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 <p class="intermediary_message">我说B</p>
             </div>
             <div class="student_message_container  pre_slide">
-                <img src="user-avatar.png" alt="" class="student_avatar">
+                <img src="chatgpt.png" alt="" class="student_avatar">
                 <p class="student_message">我也说B</p>
             </div>
         </div>
