--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
         </div>
     </div> -->
 
-    <!-- <div class="map" style="top: 350vh;"> 
-        <object data="Map.svg" id="svg-object">
+    <div class="map" style="top: 500vh;"> 
+        <object data="aMap.svg" id="svg-object">
         </object>
         <script>
             const svgObject = document.getElementById('svg-object');
@@ -148,7 +148,7 @@
         
         <div class="card"></div>
     </div>
-        -->
+     
     </div>
 
     <div class="container" >
