--- a/index.html
+++ b/index.html
@@ -60,71 +60,9 @@
             <img src="scroll.png" alt="">
         </button> 
     </div>
-    <!-- <div class="passage-container">
-        <div class="news_title_wrap">
-            <span class="date_wrap">
-                <span class="date"></span>
-            </span>
-            <span class="news_title">新闻</span>
-            <span class="date_wrap">
-                <span class="date"></span>
-            </span>
-        </div>
-        <div class="news_session">
-            <span class="small_grid">
-                <img src="news_img.jpg" alt="" class="news_img">   
-                <span class="link">
-                    <a href="">www.jk/sgdlksjkglsd</a>
-                    <a href="">www.jdslg/fjisoiosd</a>
-                    <a href="">www.fgsjd</a>
-                </span>
-            </span>
-            <span class="big_grid">
-                <span class="img"></span>  
-                <span class="link">
-                    <a href="">www.jk/sgdlksjkglsd</a>
-                    <a href="">www.jdslg/fjisoiosd</a>
-                    <a href="">www.fgsjd</a>
-                </span>
-            </span>
-            <span class="small_grid">
-                <img src="news_img.jpg" alt="" class="news_img">   
-                <span class="link">
-                    <a href="">www.jk/sgdlksjkglsd</a>
-                    <a href="">www.jdslg/fjisoiosd</a>
-                    <a href="">www.fgsjd</a>
-                </span>
-            </span>
-        </div>
-        <div class="news_session">
-            <span class="small_grid">
-                <img src="news_img.jpg" alt="" class="news_img">   
-                <span class="link">
-                    <a href="">www.jk/sgdlksjkglsd</a>
-                    <a href="">www.jdslg/fjisoiosd</a>
-                    <a href="">www.fgsjd</a>
-                </span>
-            </span>
-            <span class="big_grid">
-                <span class="link">
-                    <a href="">www.jk/sgdlksjkglsd</a>
-                    <a href="">www.jdslg/fjisoiosd</a>
-                    <a href="">www.fgsjd</a>
-                </span>
-            </span>
-            <span class="small_grid">
-                <img src="news_img.jpg" alt="" class="news_img">   
-                <span class="link">
-                    <a href="">www.jk/sgdlksjkglsd</a>
-                    <a href="">www.jdslg/fjisoiosd</a>
-                    <a href="">www.fgsjd</a>
-                </span>
-            </span>
-        </div>
-    </div> -->
 
-    <div class="map" style="top: 500vh;"> 
-        <object data="aMap.svg" id="svg-object">
+    <div class="map"> 
+        <object data="3092451869.svg" id="svg-object">
         </object>
         <script>
             const svgObject = document.getElementById('svg-object');
