--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
     <link rel="stylesheet" href="chatgpt-style.css">
 </head>
 <body>
+    
+    
     <div class="container">
+        <div id="selector">
+            <p>浏览新闻之前，请先选择专业类型：</p>
+            <div class="button_wrap"> 
+                <button id="business" class="selector_button">商科</button>
+                <button id="internet" class="selector_button">互联网</button>
+            </div>
+        </div>
         <nav id="hamnav">
             <img src="icon_1.png" alt="" class="icons" id="icon_1">
             <img src="icon_2.png" alt="" class="icons" id="icon_2">
@@ -23,7 +32,7 @@
                 <button class="send-button">
                     <img src="send-button.png" alt="">
                 </button>
-                <img src="cursor.png" alt="" class="cursor">
+                <img src="cursor.png" alt="" id="cursor">
             </div>
         </div>
 
