--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <title>ChatGPT对话框页面</title>
     <link rel="stylesheet" href="chatgpt-style.css">
+    <script src="code.jquery.com_jquery-3.7.1.min.js"></script>
 </head>
 <body>
-    
     
     <div class="container">
         <div id="selector">
