--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="chat-container">
 
                 <div class="chat-header">
-                    Default(GPT.3.5)
+                    GPT
                 </div>
 
                 <div class="chat-messages">
