--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
                 <img src="scroll.png" alt="">
             </button> 
 
+            <!-- 继续提示词 -->
+            <p class="prompt" style="display: none;">点击此处继续</p>
+
         </div>
 
     </div>
