--- a/index.html
+++ b/index.html
@@ -34,6 +34,34 @@
                 </div>
 
                 <div class="chat-messages">
+                    <!-- <div class="chatgpt-message-container"> 
+                        <img src="chatgpt.png" alt="" class="chatgpt-avatar">
+                        <p class="chatgpt-message">hhhhhhh</p>
+                        <div class="passages_wrap">
+                        <div class="passages">
+                            <div class="passage" herf="">
+                                <img src="icon_1.png" alt=""class="passage_image">
+                                <p class="passage_title"></p>
+                            </div>
+                            <div class="passage">
+                                <img src="icon_1.png" alt=""class="passage_image">
+                            </div>
+                            <div class="passage">
+                                <img src="icon_1.png" alt=""class="passage_image">
+                                <p class="passage_title">字节跳动实习内推|字节跳动商业化战略分析实习生招聘</p>
+                            </div>
+                            <div class="passage">
+                                <img src="icon_1.png" alt=""class="passage_image">
+                                <p class="passage_title">字节跳动实习内推|字节跳动商业化战略分析实习生招聘</p>
+                            </div>
+                            <div class="passage">
+                                <img src="icon_1.png" alt=""class="passage_image">
+                                <p class="passage_title">字节跳动实习内推|字节跳动商业化战略分析实习生招聘</p>
+                            </div>
+                        </div>
+                        </div>
+                    </div>
+                    -->
                 </div>
 
                 <div class="chat-input">
