--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
             <div class="cases_paraghraph">而如今这第一段实习，他已拿到实习证明。</div>
         </div>
     </div>
-    <div class="wechat_container_wrap">
-        <div class="wechat_container_down">
+    <div class="wechat_container_wrap wechat_container_wrap_z">
+        <div class="wechat_container_down ">
 
             <div class="wechat_messages">
                 <div class="in_wemessage_container pre_slide">
