--- a/index.html
+++ b/index.html
@@ -63,14 +63,36 @@
         <div class="map"> 
             <object data="3092451869.svg" id="svg-object">
             </object>>
-            
-             <div class="card">
-                <p id="area">地区名</p>
-                <p id="company">企业名<p>
+            <div class="card_wrap">
+                <div class="card">
+                    <p id="area">地区名</p>
+                    <p class="company">企业名<p>
+                </div>
+            </div>
+            <div class="secard" style="display: none;">
+                <p class="secard_title">资料卡</p>
+                <div class="secard_content">
+                    <div class="left">
+                        <p class="secard_item_title">所属行业</p>
+                        <p class="industry secard_item">科技推广和应用服务业</p>
+                        <p class="secard_item_title">成立日期</p>
+                        <p class="date secard_item">2014-10-22</p>
+                    </div>
+                    <div class="right">
+                        <p class="secard_item_title">法定代表人</p>
+                        <p class="representative secard_item">范永杰
+                        </p>
+                        <p class="secard_item_title">城市</p>
+                        <p class="city secard_item">北京市</p>
+                    </div>
+                </div>
+                <a href="" class="href">
+                    <p>跳转</p>
+                </a>
             </div>
             <!-- 表头 -->
             <p class="map_title">我是表头</p>
-            <!-- <button class="test" id="Shanxi"></button> -->
+            <button class="test" id="Beijing"></button> 
         </div>
 
     <div class="container" style="height: 200vh;">
