--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
             </object>>
             <div class="card_wrap">
                 <div class="card">
-                    <p id="area">地区名</p>
-                    <p class="company">企业名<p>
+                    <div id="area">地区名</div>
                 </div>
             </div>
             <div class="secard" style="display: none;">
