--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                 <a href="" class="href">
                     <p>跳转</p>
                 </a>
+                <img src="cancel.png" alt="">
             </div>
             <!-- 表头 -->
             <p class="map_title">我是表头</p>
