--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
 
     </div>
-        <div class="map"> 
+        <!-- <div class="map">  
             <object data="3092451869.svg" id="svg-object">
             </object>>
             <div class="card_wrap">
@@ -92,10 +92,11 @@
                 </a>
                 <img src="cancel.png" alt="">
             </div>
-            <!-- 表头 -->
+            
             <p class="map_title">我是表头</p>
-            <!-- <button class="test" id="Beijing"></button>  -->
+             <button class="test" id="Beijing"></button>  -->
         </div>
+        */
         <div id="main" style="width: 100vw;height:100vh;"></div>
         <script type="text/javascript">
           
