--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>ChatGPT对话框页面</title>
     <link rel="stylesheet" href="chatgpt-style.css">
     <script src="code.jquery.com_jquery-3.7.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/echarts@5.4.0/dist/echarts.min.js"></script>
+    <script src="cdn.jsdelivr.net_npm_echarts@5.4.3_dist_echarts.js"></script>
 
 </head>
 <body>
