--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
                 <div class="chat-messages">
                 </div>
-
+                <div  id="after_title_blur"></div>
                 <div class="chat-input">
                     <p class="input-message">send a message...</p>
                     <button class="send-button">
@@ -46,6 +46,7 @@
                 </div>
 
             </div>
+            
 
             <!-- 下滑按钮 -->
             <div class="dots">
@@ -60,6 +61,8 @@
             <p class="prompt" style="display: none;">点击此处继续</p>
 
         </div>
+
+        
 
     </div>
         <!-- <div class="map">  
