--- a/index.html
+++ b/index.html
@@ -415,14 +415,15 @@ option && myChart.setOption(option);
         
     </div>
 
-    <div class="container connection_container">
-        <p class="connection" >回到故事的开头，你是不是很好奇：为什么会有两个身份可以选择？</p>
-        <p class="connection">以“实习内推”为关键词，我们在微信搜索里挑选了出现频率较高的4个公众号，分别是“Hi实习”、“索沃内推”、“易达咨询”和“Finacc实习求职”</p>
-        <p class="connection">针对每个公众号，我们以2022年9月-2023年9月为时间界限筛选了它们发布的有关实习内推的文章</p>
-        <p class="connection">这些文章总共提到了481次公司名字，其中有77家公司至少上榜两次</p>
-        <p class="connection">在重复出现次数排行榜中，我们惊奇地发现：排名前十的恰恰就是商科企业和互联网企业，并且这两类企业各占5席。</p>
-        <p class="connection">换个角度看，这样的分布也能在一定程度上说明：商科专业和互联网专业的同学对“付费实习”需求最大。翻看社交媒体上讨论热度较高的内容，这样的倾向十分明显。</p>
-        <p class="connection">为了更好地理解参与“付费实习”的同学的处境，我们和几位同学简单聊了一下，接下来让我们倾听他们的声音。</p>
+    <div class=" connection_container">
+        <p class="connection con" >回到故事的开头，你是不是很好奇：为什么会有两个身份可以选择？</p>
+        <p class="connection con">以“实习内推”为关键词，我们在微信搜索里挑选了出现频率较高的4个公众号，分别是“Hi实习”、“索沃内推”、“易达咨询”和“Finacc实习求职”</p>
+        <p class="connection con">针对每个公众号，我们以2022年9月-2023年9月为时间界限筛选了它们发布的有关实习内推的文章</p>
+        <p class="connection con">这些文章总共提到了481次公司名字，其中有77家公司至少上榜两次</p>
+        <img src="image/rank.gif" alt="" class="con">
+        <p class="connection con">在重复出现次数排行榜中，我们惊奇地发现：排名前十的恰恰就是商科企业和互联网企业，并且这两类企业各占5席。</p>
+        <p class="connection con">换个角度看，这样的分布也能在一定程度上说明：商科专业和互联网专业的同学对“付费实习”需求最大。翻看社交媒体上讨论热度较高的内容，这样的倾向十分明显。</p>
+        <p class="connection con">为了更好地理解参与“付费实习”的同学的处境，我们和几位同学简单聊了一下，接下来让我们倾听他们的声音。</p>
     </div>
      
     <script src="chatgpt-script.js"></script>
