--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     </div>
     <div class="map">  
-        <object data="3092451869.svg" id="svg-object">
+        <object data="3092451869.svg" id="company_object">
         </object>>
         <img src="image/mapb.jpg" alt="" >
             
